--- a/WeatherPy/WeatherPy2.ipynb
+++ b/WeatherPy/WeatherPy2.ipynb
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1214,7 @@
     }
    ],
    "source": [
-    "\n",
+    "# Create scatter plot and regression\n",
     "x_axis = northhem[\"Latitude\"]\n",
     "y_axis = northhem[\"Max Temperature\"]\n",
     "(slope, intercept, rvalue, pvalue, stderr) = st.linregress(x_axis, y_axis)\n",
@@ -1222,17 +1222,25 @@
     "line_eq = \"y = \" + str(round(slope,2)) + \"x + \" + str(round(intercept,2))\n",
     "plt.scatter(x_axis,y_axis,edgecolors=\"black\",facecolors=\"lightblue\")\n",
     "plt.plot(x_axis,regress,\"r-\")\n",
+    "\n",
+    "# Set labels and title\n",
     "plt.ylabel(\"Max Temperature (F)\")\n",
     "plt.xlabel(\"Latitude\")\n",
     "plt.title(\"Latitude vs. Max Temperature (Northern Hemisphere)\")\n",
+    "\n",
+    "# Print correlation\n",
     "print(f\"The correlation coefficient is: {rvalue}\")\n",
+    "\n",
+    "# Save image\n",
     "plt.savefig(\"Images/latvtempnorth.png\")\n",
+    "\n",
+    "# Display graph\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -1254,6 +1262,7 @@
     }
    ],
    "source": [
+    "# Create scatter plot and regression\n",
     "x_axis = southhem[\"Latitude\"]\n",
     "y_axis = southhem[\"Max Temperature\"]\n",
     "(slope, intercept, rvalue, pvalue, stderr) = st.linregress(x_axis, y_axis)\n",
@@ -1261,11 +1270,19 @@
     "line_eq = \"y = \" + str(round(slope,2)) + \"x + \" + str(round(intercept,2))\n",
     "plt.scatter(x_axis,y_axis,edgecolors=\"black\",facecolors=\"lightblue\")\n",
     "plt.plot(x_axis,regress,\"r-\")\n",
+    "\n",
+    "# Set labels and title\n",
     "plt.ylabel(\"Max Temperature (F)\")\n",
     "plt.xlabel(\"Latitude\")\n",
     "plt.title(\"Latitude vs. Max Temperature (Southern Hemisphere)\")\n",
+    "\n",
+    "# Print correlation\n",
     "print(f\"The correlation coefficient is: {rvalue}\")\n",
+    "\n",
+    "# Save image\n",
     "plt.savefig(\"Images/latvtempsouth.png\")\n",
+    "\n",
+    "# Display graph\n",
     "plt.show()"
    ]
   },
@@ -1278,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -1300,6 +1317,7 @@
     }
    ],
    "source": [
+    "# Create scatter plot and regression\n",
     "x_axis = northhem[\"Latitude\"]\n",
     "y_axis = northhem[\"Humidity\"]\n",
     "(slope, intercept, rvalue, pvalue, stderr) = st.linregress(x_axis, y_axis)\n",
@@ -1307,17 +1325,25 @@
     "line_eq = \"y = \" + str(round(slope,2)) + \"x + \" + str(round(intercept,2))\n",
     "plt.scatter(x_axis,y_axis,edgecolors=\"black\",facecolors=\"lightblue\")\n",
     "plt.plot(x_axis,regress,\"r-\")\n",
+    "\n",
+    "# Set labels and title\n",
     "plt.ylabel(\"Humidity (%)\")\n",
     "plt.xlabel(\"Latitude\")\n",
     "plt.title(\"Latitude vs. Humidity (Northern Hemisphere)\")\n",
+    "\n",
+    "# Print correlation\n",
     "print(f\"The correlation coefficient is: {rvalue}\")\n",
+    "\n",
+    "# Save image\n",
     "plt.savefig(\"Images/latvhumiditynorth.png\")\n",
+    "\n",
+    "# Display graph\n",
     "plt.show() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -1339,6 +1365,7 @@
     }
    ],
    "source": [
+    "# Create scatter plot and regression\n",
     "x_axis = southhem['Latitude']\n",
     "y_axis = southhem['Humidity']\n",
     "(slope, intercept, rvalue, pvalue, stderr) = st.linregress(x_axis, y_axis)\n",
@@ -1346,11 +1373,19 @@
     "line_eq = \"y = \" + str(round(slope,2)) + \"x + \" + str(round(intercept,2))\n",
     "plt.scatter(x_axis,y_axis,edgecolors=\"black\",facecolors=\"lightblue\")\n",
     "plt.plot(x_axis,regress,\"r-\")\n",
+    "\n",
+    "# Set labels and title\n",
     "plt.ylabel('Humidity (%)')\n",
     "plt.xlabel('Latitude')\n",
     "plt.title('Latitude vs Humidity (Southern Hemisphere)')\n",
+    "\n",
+    "# Print correlation\n",
     "print(f\"The correlation coefficient is: {rvalue}\")\n",
+    "\n",
+    "# Save image\n",
     "plt.savefig(\"Images/latvhumiditysouth.png\")\n",
+    "\n",
+    "# Display graph\n",
     "plt.show()"
    ]
   },
@@ -1363,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -1385,6 +1420,7 @@
     }
    ],
    "source": [
+    "# Create scatter plot and regression\n",
     "x_axis = northhem[\"Latitude\"]\n",
     "y_axis = northhem[\"Cloudiness\"]\n",
     "(slope, intercept, rvalue, pvalue, stderr) = st.linregress(x_axis, y_axis)\n",
@@ -1393,18 +1429,24 @@
     "plt.scatter(x_axis,y_axis,edgecolors=\"black\",facecolors=\"lightblue\")\n",
     "plt.plot(x_axis,regress,\"r-\")\n",
     "\n",
+    "# Set labels and title\n",
     "plt.ylabel(\"Cloudiness (%)\")\n",
     "plt.xlabel(\"Latitude\")\n",
     "plt.title(\"Latitude vs Cloudiness (Northern Hemisphere)\")\n",
     "\n",
+    "# Print correlation\n",
     "print(f\"The correlation coefficient is: {rvalue}\")\n",
+    "\n",
+    "# Save image\n",
     "plt.savefig(\"Images/latvcloudnorth.png\")\n",
+    "\n",
+    "# Display graph\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -1426,6 +1468,7 @@
     }
    ],
    "source": [
+    "# Create scatter plot and regression\n",
     "x_axis = southhem[\"Latitude\"]\n",
     "y_axis = southhem[\"Cloudiness\"]\n",
     "(slope, intercept, rvalue, pvalue, stderr) = st.linregress(x_axis, y_axis)\n",
@@ -1433,12 +1476,19 @@
     "line_eq = \"y = \" + str(round(slope,2)) + \"x + \" + str(round(intercept,2))\n",
     "plt.scatter(x_axis,y_axis,edgecolors=\"black\",facecolors=\"lightblue\")\n",
     "plt.plot(x_axis,regress,\"r-\")\n",
+    "\n",
+    "# Create labels and title\n",
     "plt.ylabel(\"Cloudiness (%)\")\n",
     "plt.xlabel(\"Latitude\")\n",
     "plt.title(\"Latitude vs. Cloudiness (Southern Hemisphere)\")\n",
     "\n",
+    "# Print correlation\n",
     "print(f\"The correlation coefficient is: {rvalue}\")\n",
+    "\n",
+    "# Save image\n",
     "plt.savefig(\"Images/latvcloudsouth.png\")\n",
+    "\n",
+    "# Display graph\n",
     "plt.show()"
    ]
   },
@@ -1451,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -1473,6 +1523,7 @@
     }
    ],
    "source": [
+    "# Create scatter plot and regression\n",
     "x_axis = northhem[\"Latitude\"]\n",
     "y_axis = northhem[\"Wind Speed\"]\n",
     "(slope, intercept, rvalue, pvalue, stderr) = st.linregress(x_axis, y_axis)\n",
@@ -1480,18 +1531,24 @@
     "plt.scatter(x_axis,y_axis,edgecolors=\"black\",facecolors=\"lightblue\")\n",
     "plt.plot(x_axis,regress,\"r-\")\n",
     "\n",
+    "# Set labels and title\n",
     "plt.ylabel(\"Wind Speed (mph)\")\n",
     "plt.xlabel(\"Latitude\")\n",
     "plt.title(\"Latitude vs. Wind Speed (Northern Hemisphere)\")\n",
     "\n",
+    "# Print correlation\n",
     "print(f\"The correlation coefficient is: {rvalue}\")\n",
+    "\n",
+    "# Save image\n",
     "plt.savefig(\"Images/latvwindnorth.png\")\n",
+    "\n",
+    "# Display graph\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -1513,6 +1570,7 @@
     }
    ],
    "source": [
+    "# Create scatter plot and regression\n",
     "x_axis = southhem[\"Latitude\"]\n",
     "y_axis = southhem[\"Wind Speed\"]\n",
     "(slope, intercept, rvalue, pvalue, stderr) = st.linregress(x_axis, y_axis)\n",
@@ -1520,12 +1578,19 @@
     "line_eq = \"y = \" + str(round(slope,2)) + \"x + \" + str(round(intercept,2))\n",
     "plt.scatter(x_axis,y_axis,edgecolors=\"black\",facecolors=\"lightblue\")\n",
     "plt.plot(x_axis,regress,\"r-\")\n",
+    "\n",
+    "# Set labels and title\n",
     "plt.ylabel(\"Wind Speed (mph)\")\n",
     "plt.xlabel(\"Latitude\")\n",
     "plt.title(\"Latitude vs. Wind Speed (Southern Hemisphere)\")\n",
     "\n",
+    "# Print correlation\n",
     "print(f\"The correlation coefficient is: {rvalue}\")\n",
+    "\n",
+    "# Save image\n",
     "plt.savefig(\"Images/latvwindsouth.png\")\n",
+    "\n",
+    "# Display graph\n",
     "plt.show()"
    ]
   },
