--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -13,7 +13,6 @@
     "import requests\n",
     "import gmaps\n",
     "import json\n",
-    "from pprint import pprint\n",
     "from config import gkey\n",
     "gmaps.configure(gkey)"
    ]
@@ -286,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -408,22 +407,22 @@
        "4           0        13            77.00        9.22  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ideal_weather_df = weather_df.loc[(weather_df[\"Max Temperature\"] > 70) & (weather_df[\"Max Temperature\"] < 80) & (weather_df[\"Cloudiness\"] == 0) & (weather_df[\"Wind Speed\"] < 10), :]\n",
-    "ideal_weather_df = ideal_weather_df.dropna(how='any')\n",
-    "ideal_weather_df.reset_index(inplace=True)\n",
-    "del ideal_weather_df['index']\n",
-    "ideal_weather_df"
+    "hotel_df = weather_df.loc[(weather_df[\"Max Temperature\"] > 70) & (weather_df[\"Max Temperature\"] < 80) & (weather_df[\"Cloudiness\"] == 0) & (weather_df[\"Wind Speed\"] < 10), :]\n",
+    "hotel_df = hotel_df.dropna(how='any')\n",
+    "hotel_df.reset_index(inplace=True)\n",
+    "del hotel_df['index']\n",
+    "hotel_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +550,7 @@
        "4           0        13            77.00        9.22               Sakaka  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,9 +558,9 @@
    "source": [
     "hotels = []\n",
     "\n",
-    "for i in range(len(ideal_weather_df)):\n",
-    "    lat = ideal_weather_df.loc[i][\"Latitude\"]\n",
-    "    lng = ideal_weather_df.loc[i][\"Longitude\"]\n",
+    "for i in range(len(hotel_df)):\n",
+    "    lat = hotel_df.loc[i][\"Latitude\"]\n",
+    "    lng = hotel_df.loc[i][\"Longitude\"]\n",
     "\n",
     "    parameter = {\"location\": f\"{lat},{lng}\", \"radius\": 5000, \"types\" : \"hotel\", \"key\": gkey}\n",
     "    \n",
@@ -572,14 +571,14 @@
     "        hotels.append(jsn['results'][0]['name'])\n",
     "    except:\n",
     "        hotels.append(\"\")\n",
-    "ideal_weather_df[\"Hotel Name\"] = hotels\n",
-    "ideal_weather_df = ideal_weather_df.dropna(how='any')\n",
-    "ideal_weather_df"
+    "hotel_df[\"Hotel Name\"] = hotels\n",
+    "hotel_df = hotel_df.dropna(how='any')\n",
+    "hotel_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,13 +594,13 @@
     "\"\"\"\n",
     "# Store the DataFrame Row\n",
     "# NOTE: be sure to update with your DataFrame name\n",
-    "hotel_info = [info_box_template.format(**row) for index, row in ideal_weather_df.iterrows()]\n",
-    "locations = ideal_weather_df[[\"Latitude\", \"Longitude\"]]"
+    "hotel_info = [info_box_template.format(**row) for index, row in hotel_df.iterrows()]\n",
+    "locations = hotel_df[[\"Latitude\", \"Longitude\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
