--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -11,10 +11,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "three obs trends\n",
-    "1\n",
-    "2\n",
-    "3"
+    "There is a clear correlation between city latitude and maximum temperature. In the Northern Hemisphere, there is a strong negative linear relationship, with higher latitudes correlating with lower temperatures and a correlation value of roughly -0.85. In the Southern Hemisphere, the opposite appears to be true with a strong positive linear relationship showing higher latitudes with higher temperatures and a correlation value of roughly 0.72. This means that cities closest to the equator have the highest maximum temperatures. \n",
+    "\n",
+    "There is no clear correlation bewteen city latitude and wind speeds. In the Northern Hemisphere, there does not appear to be a relationship between latitude and wind speed, highlighted by a correlation value of roughly 0.01. In the Southern Hemisphere, there also does not appear to be a relationship between latitude and wind speed, highlighted by a correlation value of roughly -0.18. \n",
+    "\n",
+    "There is also no clear correlation between city latitude and humidity. In the Northern Hemisphere, there does not appear to be a relationship between latitude and humidity, highlighted by a correlation value of roughly 0.18. In the Southern Hemisphere, there also does not appear to be a relationship between latitude and humidity, highlighted by a correlation value of roughly 0.09. \n",
+    "\n",
+    "Additionally, there is no clear correlation between city latitude and cloudiness. In the Northern Hemisphere, there does not appear to be a relationship between latitude and cloudiness, highlighted by a correlation value of roughly 0.13. In the Southern Hemisphere, there also does not appear to be a relationship between latitude and cloudiness, highlighted by a correlation value of roughly 0.17. \n",
+    "\n",
+    "Given these low correlation values, a city's latitude does not appear to have a major affect on its wind speeds, humidity, or cloudiness. \n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -1510,7 +1518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Latitude vs. Cloudiness plots for the Southern and Northern Hemispheres model the relationship bewteen city latitude and cloudiness in each hemisphere. In the Northern Hemisphere, there does not appear to be a relationship between latitude and humidity, highlighted by a correlation value of roughly 0.13. In the Southern Hemisphere, there also does not appear to be a relationship between latitude and humidity, highlighted by a correlation value of roughly 0.17."
+    "The Latitude vs. Cloudiness plots for the Southern and Northern Hemispheres model the relationship bewteen city latitude and cloudiness in each hemisphere. In the Northern Hemisphere, there does not appear to be a relationship between latitude and cloudiness, highlighted by a correlation value of roughly 0.13. In the Southern Hemisphere, there also does not appear to be a relationship between latitude and cloudiness, highlighted by a correlation value of roughly 0.17."
    ]
   },
   {
@@ -1618,22 +1626,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Latitude vs. Wind Speed plots for the Southern and Northern Hemispheres model the relationship bewteen city latitude and wind speed in each hemisphere. In the Northern Hemisphere, there does not appear to be a relationship between latitude and humidity, highlighted by a correlation value of roughly 0.01. In the Southern Hemisphere, there also does not appear to be a relationship between latitude and humidity, highlighted by a correlation value of roughly -0.18."
+    "The Latitude vs. Wind Speed plots for the Southern and Northern Hemispheres model the relationship bewteen city latitude and wind speed in each hemisphere. In the Northern Hemisphere, there does not appear to be a relationship between latitude and wind speed, highlighted by a correlation value of roughly 0.01. In the Southern Hemisphere, there also does not appear to be a relationship between latitude and wind speed, highlighted by a correlation value of roughly -0.18."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:PythonData] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-PythonData-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1645,7 +1646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
